http/1.7/modules/ROOT/pages/http-documentation.adoc
= HTTP Connector Reference - Mule 4
:page-aliases: connectors::http/http-documentation.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

HTTP Connector v1.7

Use Anypoint Connector for HTTP (HTTP Connector) to handle and perform HTTP requests. This class
only serves as an extension definition. This
connector's configurations are divided between a server (`<http:listener-config>`) and a client (`<http:requester-config>`). capabilities.

Release Notes: xref:release-notes::connector/connector-http.adoc[HTTP Connector Release Notes]

== Configurations
---
[[listenerConfig]]
=== Listener Configuration

Configuration element for a HttpListener.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<listenerConfig_listener, Listener>>
 | The connection types to provide to this configuration. | | x
| Base Path a| String |  Base path to use for all requests that reference this config. |  |
| Listener Interceptors a| <<CorsInterceptorWrapper>> |  Listener interceptors that will apply on request and on response events. |  |
| Reject Invalid Transfer Encoding a| Boolean |  If true, request with an invalid value for "Transfer-Encoding" header will be rejected with a 400 Bad Request. |  false |
|===

==== Connection Types

[[listenerConfig_listener]]
===== Listener

Connection provider for a HttpListener, handles the creation of HttpServer instances.

====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| TLS Configuration a| <<Tls>> |  Reference to a TLS config element. This will enable HTTPS for this config. |  |
| Protocol a| Enumeration, one of:
** HTTP
** HTTPS |  Protocol to use for communication. Default value is HTTP. When using HTTPS the HTTP communication is secured using TLS / SSL. If HTTPS was configured as protocol then the user needs to configure at least the keystore in the tls:context child element of this listener-config. |  HTTP |
| Host a| String |  Host where the requests is sent. |  | x
| Port a| Number |  Port where the requests will be received. |  | x
| Use Persistent Connections a| Boolean |  Indicates whether to use persistent connections:
* `true`
Mule uses persistent connections.
* `false`
Mule closes the connection after the first request completes. |  true |
| Connection Idle Timeout a| Number |  The number of milliseconds that a connection can remain idle before it is closed. The value of this attribute is only used when persistent connections are enabled. The listener default timeout is bigger than our requester default timeout to avoid 'Remotely closed' exception when you start sending a request on an existing connection just before the timeout occurs. |  40000 |
| Read Timeout a| Number |  Read timeout to configure in milliseconds |  30000 |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
|===


== Associated Sources

* <<listener>>

---
[[requestConfig]]
=== Request Configuration

Configuration element for a HTTP requests.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<requestConfig_request, Request>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  |
| Base Path a| String |  Base path to use for all requests that reference this config. |  / |
| Follow Redirects a| Boolean |  Specifies whether to follow redirects or not. Default value is true. |  true |
| Send Body Mode a| Enumeration, one of:
** ALWAYS
** AUTO
** NEVER |  Defines if the request should contain a body or not. If AUTO, it depends on the method (GET, HEAD and OPTIONS will not send a body). |  AUTO |
| Request Streaming Mode a| Enumeration, one of:
** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming or not. If this attribute is not present, the behavior depends on the type of the payload (it will stream only for InputStream). If set to true, it will always stream. If set to false, it will never stream. As streaming is done the request is sent user Transfer-Encoding: chunked. |  AUTO |
| Enable Cookies a| Boolean |  If true, cookies received in HTTP responses will be stored, and sent in subsequent HTTP requests. |  true |
| Default Headers a| Array of <<defaultHeader>> |  Default HTTP headers the message should include. |  |
| Query Parameters a| Array of <<QueryParam>> |  Default Query parameters the request should include. |  |
| Send Correlation Id a| Enumeration, one of:
** AUTO
** ALWAYS
** NEVER |  Whether to specify a correlationId when publishing messages. This applies both for custom correlation IDs specifies at the operation level and for default correlation IDs taken from the current event |  AUTO |
| Preserve Headers Case a| Boolean |  By default, header keys are stored internally in lower-case. This is to improve performance of headers handling and is functionally correct as specified in the RFC.  In the case a server expects headers in a specific case, this flag may be set to true so the case of the header keys are preserved. |  false |
| Response Timeout a| Number |  Maximum time that the request element will block the execution of the flow waiting for the HTTP response. If this value is not present, the default response timeout from the Mule configuration will be used. |  |
| Response Validator a| One of:
* <<SuccessStatusCodeValidator>>
* <<FailureStatusCodeValidator>>
* <<ExpressionResponseValidator>> |  Configures a default error handling of the response. |  |
|===

==== Connection Types

[[requestConfig_request]]
===== Request

Connection provider for a HTTP request, handles the creation of HttpExtensionClient instances.

====== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Proxy Config a| One of:
* <<proxy>>
* <<ntlm-proxy>> |  Configures a proxy for outbound connections. A proxy element must define a host name and a port attributes, and optionally can define a username and a password. |  |
| Authentication a| One of:
* <<BasicAuthentication>>
* <<DigestAuthentication>>
* <<NtlmAuthentication>> |  Authentication method to use for the HTTP request. |  |
| Connectivity Test a| <<HttpConnectivityValidator>> |  |  |
| TLS Configuration a| <<Tls>> |  Reference to a TLS config element. This will enable HTTPS for this config. |  |
| Protocol a| Enumeration, one of:
** HTTP
** HTTPS |  Protocol to use for communication. Default value is HTTP. When using HTTPS the HTTP communication is secured using TLS / SSL. If HTTPS was configured as protocol then the user can customize the tls/ssl configuration by defining the tls:context child element of this listener-config. If not tls:context is defined then the default JVM certificates are going to use to establish communication. |  HTTP |
| Host a| String |  Host where the requests is sent. |  |
| Port a| Number |  Port where the requests is sent. If the protocol attribute is HTTP (default) then the default value is 80, if the protocol attribute is HTTPS then the default value is 443. |  |
| Use Persistent Connections a| Boolean |  Indicates whether to use persistent connections:
* `true`
Mule uses persistent connections.
* `false`
Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number |  Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. By default the number of connections is unlimited. |  -1 |
| Connection Idle Timeout a| Number |  The number of milliseconds that a connection can remain idle before it is closed. The value of this attribute is only used when persistent connections are enabled. |  30000 |
| Stream Response a| Boolean |  If this value is `true`, Mule streams received responses., meaning processing continues as soon as all headers are parsed and the body streamed as it arrives. When enabled, the response MUST be eventually read since depending on the configured buffer size it may not fit into memory and processing will stop until space is available. |  false |
| Response Buffer Size a| Number |  Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Client Socket Properties a| <<TcpClientSocketProperties>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
|===

== Supported Operations
* <<request>>

== Operations

[[request]]
=== Request

`<http:request>`

Consumes an HTTP service.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Method a| String |  The HTTP method for the request. |  GET |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Path a| String |  Path where the request is sent. |  |
| URL a| String |  URL where to send the request. |  |
| Follow Redirects a| Boolean |  Specifies whether to follow redirects or not. |  |
| Send Body Mode a| Enumeration, one of:
** ALWAYS
** AUTO
** NEVER |  Defines if the request should contain a body or not. |  |
| Request Streaming Mode a| Enumeration, one of:
** AUTO
** ALWAYS
** NEVER |  Defines if the request should be sent using streaming or not. |  |
| Response Timeout a| Number |  Maximum time that the request element will block the execution of the flow waiting for the HTTP response. |  |
| Body a| Any |  The body of the response message |  `#[payload]` |
| Headers a| Object |  HTTP headers the message should include. |  |
| URI Parameters a| Object |  URI parameters that should be used to create the request. |  |
| Query Parameters a| Object |  Query parameters the request should include. |  |
| Send Correlation Id a| Enumeration, one of:
** AUTO
** ALWAYS
** NEVER |  Options on whether to include an outbound correlation ID or not |  |
| Correlation Id a| String |  Allows to set a custom correlation ID |  |
| Response Validator a| One of:
* <<SuccessStatusCodeValidator>>
* <<FailureStatusCodeValidator>>
* <<ExpressionResponseValidator>> |  Configures error handling of the response. |  |
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===


=== For Configurations
* <<requestConfig>>

==== Throws
* HTTP:GATEWAY_TIMEOUT
* HTTP:UNSUPPORTED_MEDIA_TYPE
* HTTP:CONNECTIVITY
* HTTP:INTERNAL_SERVER_ERROR
* HTTP:METHOD_NOT_ALLOWED
* HTTP:NOT_ACCEPTABLE
* HTTP:SERVICE_UNAVAILABLE
* HTTP:TOO_MANY_REQUESTS
* HTTP:CLIENT_SECURITY
* HTTP:FORBIDDEN
* HTTP:UNAUTHORIZED
* HTTP:BAD_GATEWAY
* HTTP:RETRY_EXHAUSTED
* HTTP:NOT_FOUND
* HTTP:BAD_REQUEST
* HTTP:PARSING
* HTTP:TIMEOUT
* HTTP:SECURITY


[[basicSecurityFilter]]
=== Basic Security Filter

`<http:basic-security-filter>`

Authenticates received HTTP requests. Must be used after a listener component.

==== Parameters

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Realm a| String |  Authentication realm. |  |x
| Security Providers a| Array of String |  The delegate-security-provider to use for authenticating. Use this in case you have multiple security managers defined in your configuration. |  |
| Attributes a| <<HttpRequestAttributes>> |  The HttpRequestAttributes coming from an HTTP listener source to check the `Authorization` header. |  #[attributes] |
|===

==== Throws
* HTTP:BASIC_AUTHENTICATION
* MULE:SERVER_SECURITY

[[loadStaticResource]]
=== Load Static Resource

`<http:load-static-resource>`

Serves up static content for use with HTTP, using the request path to lookup the resource.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Resource Base Path a| String |  The resource base from where documents are served up. For example: /Users/maxthemule/resources. Inputs should be validated when using expressions here to avoid overexposing files. |  | x
| Default File a| String |  The default file to serve when a directory is specified. The default value is 'index.html'. Inputs should be validated when using expressions here to avoid overexposing files. |  index.html |
| Attributes a| <<HttpRequestAttributes>> |  The HttpRequestAttributes coming from an HTTP listener source to check the required resources. |  #[attributes] |
| Target Variable a| String |  Name of the variable that storesoperation's output will be placed |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
|===

==== Output
[cols=".^50%,.^50%"]
|===
| *Type* a| Any
| *Attributes Type* a| Any
|===


==== Throws
* HTTP:NOT_FOUND


== Sources

[[listener]]
=== Listener
`<http:listener>`

Represents a listener for HTTP requests.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Path a| String |  Relative path from the path set in the HTTP Listener configuration |  | x
| Allowed Methods a| String |  Comma separated list of allowed HTTP methods by this listener. To allow all methods do not defined the attribute. |  |
| Response Streaming Mode a| Enumeration, one of:
** AUTO
** ALWAYS
** NEVER |  Defines if the response should be sent using streaming or not. If this attribute is not present, the behavior depends on the type of the payload (it will stream only for InputStream). If set to true, it will always stream. If set to false, it will never stream. As streaming is done the response is sent user Transfer-Encoding: chunked. |  AUTO |
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  |
| Body a| Any |  The body of the response message. |  `#[payload]` |
| Headers a| Object |  HTTP headers the message should include. |  |
| Status Code a| Number |  HTTP status code the response should have. |  |
| Reason Phrase a| String |  HTTP reason phrase the response should have. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpRequestAttributes>>
|===

=== For Configurations
* <<listenerConfig>>

[[pollingSource]]
=== Polling Source

`<http:polling-source>`

Event source that executes a scheduled HTTP request to a given HTTP server.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Path a| String |  Relative path from the path set in the HTTP Request operation configuration |  |
| Method a| String |  |  GET |
| Response Validator a| One of:
* <<SuccessStatusCodeValidator>>
* <<FailureStatusCodeValidator>>
* <<ExpressionResponseValidator>> |  Validation applied to the connectivity test response. |  |
| Primary Node Only a| Boolean |  Determines whether to execute this source only on the primary node when running Mule instances in a cluster. |  |
| On Capacity Overload a| Enumeration, one of:
** DROP
** WAIT
** FAIL |  Strategy that Mule applies when the flow receives more messages than it has the capacity to manage. |  WAIT |
| Scheduling Strategy a| scheduling-strategy |  Configures the scheduler that triggers the polling. |  | x
| Streaming Strategy a| * <<repeatable-in-memory-stream>>
* <<repeatable-file-store-stream>>
* non-repeatable-stream |  Configures how Mule processes streams. Repeatable streams are the default behavior. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Body a| String |  Body of the response message. |   |
| Headers a| Array of <<pollingRequestHeader>> |  HTTP headers the message includes. |  |
| URI Parameters a| Array of <<pollingRequestUriParam>> |  URI parameters used to create the request. |  |
| Query Parameters a| Array of <<pollingRequestQueryParam>> |  Query parameters the request includes. |  |
| Split Expression a| String |  The split expression to apply to the response. |  |
| Watermark Expression a| String |  The expression to retrieve the watermark from the (split) response. |  |
| Id Expression a| String |  The expression to retrieve the ID from every (split) item. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  Retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations
* <<requestConfig>>

== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
=== Trust Store

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of store. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Key Store

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  |
| Type a| String | Type of store. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[standard-revocation-check]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:
* `true`
Verify only the last element in the certificate chain.
* `false`
Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:
* `true`
Check the Certification Revocation List (CRL) for certificate validity.
* `false`
Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:
* `true`
Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.
* `false`
Do not use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:
* `true`
Avoid verification failure.
* `false`
Allow the verification to fail. |  |
|===

[[custom-ocsp-responder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[crl-file]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  |
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | Reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
|===

[[CorsInterceptorWrapper]]
=== CORS Interceptor Wrapper

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Cors Interceptor a| <<CorsListenerInterceptor>> | Interceptor which validates that requests match CORS specification and acts on responses accordingly. |  | x
|===

[[CorsListenerInterceptor]]
=== CORS Listener Interceptor

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Allow Credentials a| Boolean |  | false |
| Origins a| Array of One of:
* <<public-resource>>
* <<origin>> |  |  | x
|===

[[HttpRequestAttributes]]
=== HTTP Request Attributes

Configures HTTP request attributes for the configuration. To get familiar on how to use message attributes, refer to the xref:mule-runtime::intro-mule-message.adoc[about message attributes] documentation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Listener Path a| String | Full path where the request was received. |  | x
| Raw Request Path a| String | Full path requested, encoded as received.
 @since 1.5.0 |  | x
| Relative Path a| String | Path where the request was received, without considering the base path. |  | x
| Masked Request Path a| String | Path computed from masking the listenerPath and taking the difference. Note that this
 is only calculated when the null otherwise.
 @since 1.4.0 |  | x
| Version a| String | HTTP version of the request. |  | x
| Scheme a| String | HTTP scheme of the request. |  | x
| Method a| String | HTTP method of the request. |  | x
| Request Uri a| String | Full URI of the request. |  | x
| Raw Request Uri a| String | Full URI of the request, encoded as received.
 @since 1.5.0 |  | x
| Query String a| String | Query string of the request. |  | x
| Local Address a| String | Local host address from the server. |  | x
| Remote Address a| String | Remote host address from the sender. |  | x
| Client Certificate a| Any | Client certificate (if 2 way TLS is enabled). |  |
| Query Params a| Object | Query parameters map built from the parsed string. |  | x
| Uri Params a| Object | URI parameters extracted from the request path. |  | x
| Request Path a| String | Full path requested. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
|===


[[repeatable-in-memory-stream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the MAX buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the data stream. If the streamed data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand, meaning that a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer gets full. |  |
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  |
| Buffer Unit a| Enumeration, one of:
** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[repeatable-file-store-stream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer's content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:
* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.
* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:
** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times that a redelivered request can be processed unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  |
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  |
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  |
| Object Store a| Object Store | Configures the object store that stores the redelivery counter for each message. |  |
|===

[[HttpConnectivityValidator]]
=== HTTP Connectivity Validator

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Request Path a| String | Path used in the connectivity test request URI. |  | x
| Request Method a| String | HTTP method for the connectivity test request. | GET |
| Follow Redirects a| Boolean | Specifies whether to follow redirects or not. | true |
| Response Timeout a| Number | Maximum time that the request element blocks the execution of the flow waiting for the HTTP response. | 10000 |
| Response Timeout Unit a| Enumeration, one of:
** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Response timeout time unit. | MILLISECONDS |
| Request Builder a| <<HttpRequesterTestRequestBuilder>> | Request builder to use to connectivity test. |  | x
| Response Validator a| One of:
* <<SuccessStatusCodeValidator>>
* <<FailureStatusCodeValidator>>
* <<ExpressionResponseValidator>> | Validation applied to the connectivity test response. |  |
|===

[[HttpRequesterTestRequestBuilder]]
=== Http Requester Test Request Builder

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Request Body a| String |  |  |
| Request Headers a| Array of <<requestHeader>> |  |  |
| Request Query Params a| Array of <<queryParam>> |  |  |
| Request Uri Params a| Array of <<UriParam>> |  |  |
|===


[[requestHeader]]
=== Request Header

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[queryParam]]
=== Query Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[UriParam]]
=== URI Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[TcpClientSocketProperties]]
=== TCP Client Socket Properties

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Connection Timeout a| Number | Time to wait during a connection to a remote server before failing with a timeout. If the configured requester host resolves to multiple IP addresses, the host tries to connect to every single IP address.  Therefore, if every connection times out, the number of resolved IP addresses multiplies the global connection timeout. | 30000 |
| Send Tcp No Delay a| Boolean | Indicates whether or not to collect the transmitted data for greater efficiency and send the data immediately. | true |
| Linger a| Number | How long, in milliseconds, the socket takes to close, so any remaining data is transmitted correctly. |  |
| Keep Alive a| Boolean | Indicates whether or not to close the open socket connection. | false |
| Fail On Unresolved Host a| Boolean | Indicates whether the socket fails during its creation if the host set on the endpoint cannot be resolved. | true |
| Send Buffer Size a| Number | Size of the buffer, in bytes, when sending data. |  |
| Receive Buffer Size a| Number | Size of the buffer, in bytes, when receiving data. |  |
| Client Timeout a| Number | Time, in milliseconds, that the socket waits in a blocking operation before failing. |  |
| Reuse Address a| Boolean | When trying to bind the port, indicates whether to reuse (`true`) or fail (`false`) the configured port.  | true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Time Unit a| Enumeration, one of:
** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[defaultHeader]]
=== Default Header

Headers automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===


[[QueryParam]]
=== Query Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Represents the Key of this HTTP Query Parameter |  | x
| Value a| String | Represents the Value of this HTTP Query Parameter |  | x
|===

[[HttpResponseAttributes]]
=== HTTP Response Attributes

Configures HTTP response attributes for the configuration. To get familiar on how to use message attributes, refer to the xref:mule-runtime::intro-mule-message.adoc[about message attributes] documentation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response.  |  | x
| Headers a| Object | Map of HTTP headers in the message.  |  | x
|===

[[pollingRequestHeader]]
=== Polling Request Header

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Represents the Key of this HTTP Header |  | x
| Value a| String | Represents the Value of this HTTP Header, that could be an expression depending on a watermarking value
 that would be then resolved |  | x
|===

[[pollingRequestUriParam]]
=== Polling Request Uri Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Represents the Key of this HTTP URI Parameter |  | x
| Value a| String | Represents the Value of this HTTP URI Parameter, that could be an expression depending on a watermarking value
 that would be then resolved |  | x
|===

[[pollingRequestQueryParam]]
=== Polling Request Query Param

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Represents the Key of this HTTP Query Parameter |  | x
| Value a| String | Represents the Value of this HTTP Query Parameter, that could be an expression depending on a watermarking value
 that would be then resolved |  | x
|===

[[BasicAuthentication]]
=== Basic Authentication

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | The username to authenticate. |  | x
| Password a| String | The password to authenticate. |  | x
| Preemptive a| Boolean | Configures if authentication should be preemptive or not. Preemptive authentication will send the authentication header in
 the first request, instead of waiting for a 401 response code to send it. | true |
|===

[[DigestAuthentication]]
=== Digest Authentication

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | The username to authenticate. |  | x
| Password a| String | The password to authenticate. |  | x
| Preemptive a| Boolean | Configures if authentication should be preemptive or not. Preemptive authentication will send the authentication header in
 the first request, instead of waiting for a 401 response code to send it. | true |
|===

[[NtlmAuthentication]]
=== NTLM Authentication

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Domain a| String | The domain to authenticate. |  |
| Workstation a| String | The workstation to authenticate. |  |
| Username a| String | The username to authenticate. |  | x
| Password a| String | The password to authenticate. |  | x
| Preemptive a| Boolean | Configures if authentication should be preemptive or not. Preemptive authentication will send the authentication header in
 the first request, instead of waiting for a 401 response code to send it. | true |
|===

[[proxy]]
=== Proxy

Configures a proxy for outbound connections.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests is sent. |  | x
| Port a| Number | Port where the proxy requests is sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| String | A list of comma separated hosts against which the proxy should not be used |  |
|===

[[ntlm-proxy]]
=== NTLM Proxy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Ntlm Domain a| String | The domain to authenticate against the proxy. |  | x
| Host a| String | Host where the proxy requests is sent. |  | x
| Port a| Number | Port where the proxy requests is sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| String | A list of comma separated hosts against which the proxy should not be used |  |
|===

[[SuccessStatusCodeValidator]]
=== Success Status Code Validator

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Values a| String | Status codes that will be considered. |  | x
|===

[[FailureStatusCodeValidator]]
=== Failure Status Code Validator

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Values a| String | Status codes that will be considered. |  | x
|===

[[ExpressionResponseValidator]]
=== Expression Response Validator

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Expression a| String | DataWeave expression. |  | x
|===


[[origin]]
=== Origin

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the Origins, from which the browser can load resources. |  | x
| Access Control Max Age a| Number | The amount of time, in seconds, to cache the results of a preflight request. |  | x
| Allowed Methods a| Array of <<Method>> | Indicates which HTTP methods are permitted while accessing the resources from the origin. |  |
| Allowed Headers a| Array of <<Header>> | In preflight requests, indicates the HTTP headers to use during the actual request. |  |
| Expose Headers a| Array of <<Header>> | Response headers exposed in the request. |  |
|===

[[Method]]
=== Method

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Method Name a| String | HTTP method name. |  | x
|===

[[Header]]
=== Header

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Header Name a| String | HTTP header name. |  | x
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
